--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^1.47.0",
+    "axios": "^1.3.3",
+    "crypto-js": "^4.1.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1"
+    "react-number-format": "^5.1.3",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.1",
+    "react-use": "^17.4.0",
+    "react-verification-input": "^3.1.3",
+    "uuid": "^9.0.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-stripe-elements": "^6.0.6",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
